--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Parses objects quickly and returns types and a basic set of statistics about inner arrays (`median, average, max, min, etc`)",
   "main": "server.js",
   "scripts": {
+    "build": "cp ./lib/ObjectStatistics.js ./public/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -20,11 +21,13 @@
   "dependencies": {
     "@fastify/rate-limit": "^7.4.0",
     "@fastify/static": "^6.5.0",
+    "@fastify/websocket": "^7.0.1",
     "bandwidth-throttle-stream": "^1.1.4",
     "dotenv": "^16.0.2",
     "fastify": "^4.5.3",
     "ndjson": "^2.0.0",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^3.2.10",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.23.0"
