--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@fastify/static": "^6.5.0",
     "@fastify/websocket": "^7.0.1",
     "bandwidth-throttle-stream": "^1.1.4",
+    "content-type-parser": "^1.0.2",
     "dotenv": "^16.0.2",
     "fastify": "^4.5.3",
     "ndjson": "^2.0.0",
     "node-fetch": "^3.2.10",
+    "url-exist": "^3.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
